--- a/document-demo/src/app/app.component.css
+++ b/document-demo/src/app/app.component.css
@@ -125,73 +125,207 @@ button:active {
 
 /************************************************************************/
 /************************************************************************/
-#fmmHead{
+#fmmHead {
   margin: 10px auto 10px auto;
   padding: 10px auto 10px auto;
-  text-align: center;
   display: flex;
+  -webkit-justify-content: center;
+  justify-content: center;
   background: rgba(0,255,50,.8);
-  border: 2px solid rgba(50,0,255,.8);
-
+  text-align: center;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  text-align: center;
+  position:relative;
+  flex-direction: column;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+  -moz-box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+  box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
 }
 
-#fmmHT
-{
-    position:relative;
-    display: flex;
-    -webkit-box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
-       -moz-box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
-            box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+#fmmHead:before, #fmmHT:after {
+  position:absolute;
+  z-index:-1;
+  -webkit-box-shadow:0 0 20px rgba(0,0,0,0.8);
+  -moz-box-shadow:0 0 20px rgba(0,0,0,0.8);
+  box-shadow:0 0 20px rgba(0,0,0,0.8);
+  top:0;
+  bottom:0;
+  left:10px;
+  right:10px;
+  -moz-border-radius:100px / 10px;
+  border-radius:100px / 10px;
 }
 
-#fmmHT:before, #fmmHT:after
-{
-    content:"";
-    position:absolute;
-    z-index:-1;
-    -webkit-box-shadow:0 0 20px rgba(0,0,0,0.8);
-    -moz-box-shadow:0 0 20px rgba(0,0,0,0.8);
-    box-shadow:0 0 20px rgba(0,0,0,0.8);
-    top:0;
-    bottom:0;
-    left:10px;
-    right:10px;
-    -moz-border-radius:100px / 10px;
-    border-radius:100px / 10px;
+#fmmHead:after {
+  right:10px;
+  left:auto;
+  -webkit-transform:skew(8deg) rotate(3deg);
+  -moz-transform:skew(8deg) rotate(3deg);
+  -ms-transform:skew(8deg) rotate(3deg);
+  -o-transform:skew(8deg) rotate(3deg);
+  transform:skew(8deg) rotate(3deg);
 }
 
-#fmmHT:after
-{
-    right:10px;
-    left:auto;
-    -webkit-transform:skew(8deg) rotate(3deg);
-       -moz-transform:skew(8deg) rotate(3deg);
-        -ms-transform:skew(8deg) rotate(3deg);
-         -o-transform:skew(8deg) rotate(3deg);
-            transform:skew(8deg) rotate(3deg);
-}
-
-#fmmHTC{
+#fmmHTC {
+  flex-direction: column;
   flex-wrap: wrap;
+  -webkit-justify-content: center;
+  justify-content: center;
+  color: #fff;
+  font-family: georgia;
+  text-align: center;
+  margin: 10px auto 10px auto;
+  padding: 10px auto 10px auto;
   animation-name: headerGo;
   animation-iteration-count: infinite;
   animation-duration: 13s;
-  color: #fff;
-
+  animation-timing-function: ease-in-out;
+  animation-direction: alternate;
 }
 
-fmmHTC2
+#fmmHTC2 {
+  flex-direction: column;
+  flex-wrap: wrap;
+  font-family: verdana;
+  color: #fff;
+  text-align: center;
+  margin: 10px auto 10px auto;
+  padding: 10px auto 10px auto;
+  animation-name: headerGo;
+  animation-iteration-count: infinite;
+  animation-duration: 13s;
+  animation-timing-function: ease-in-out;
+  animation-direction: alternate;
+}
+
 @-webkit-keyframes headerGo {
-    0%   {background-color:red; }
-    25%  {background-color:yellow; }
-    50%  {background-color:blue; }
-    75%  {background-color:green; }
-    100% {background-color:red; }
+    0%   {color:red; }
+    25%  {
+      color:yellow;
+      text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
+    }
+    50%  {color:lightblue; }
+    75%  {
+      color:lightgreen;
+      text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
+    }
+    100% {color:red; }
 }
 @keyframes headerGo {
-    0%   {background-color:red; }
-    25%  {background-color:yellow; }
-    50%  {background-color:blue; }
-    75%  {background-color:green; }
-    100% {background-color:red; }
+    0%   {color:red; }
+    25%  {
+      color:yellow;
+      text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
+    }
+    50%  {color:lightblue; }
+    75%  {
+      color:lightgreen;
+      text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
+    }
+    100% {color:red; }
+}
+.ball {
+display: inline-block;
+width: 100%;
+height: 100%;
+margin: 0;
+border-radius: 50%;
+position: relative;
+-webkit-transform-style: preserve-3d;
+background: url('https://github.com/loyti/images/blob/master/world-map-rotate.png?raw=true') repeat-x;
+background-size: auto 100%;
+-webkit-animation: move-map 30s infinite linear;
+-moz-animation: move-map 30s infinite linear;
+-o-animation: move-map 30s infinite linear;
+-ms-animation: move-map 30s infinite linear;
+animation: move-map 30s infinite linear;
+}
+
+.ball:before {
+content: "";
+position: absolute;
+top: 0%;
+left: 0%;
+width: 100%;
+height: 100%;
+border-radius: 50%;
+box-shadow: -40px 10px 70px 10px rgba(0,0,0,0.5) inset;
+z-index: 2;
+}
+
+.ball:after {
+content: "";
+position: absolute;
+border-radius: 50%;
+width: 100%;
+height: 100%;
+top: 0;
+left: 0;
+-webkit-filter: blur(0);
+opacity: 0.3;
+background: radial-gradient(circle at 50% 80%, #81e8f6, #76deef 10%, #055194 66%, #062745 100%);
+}
+
+.ball .shadow {
+position: absolute;
+width: 100%;
+height: 100%;
+background: radial-gradient(circle at 50% 50%, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.1) 40%, rgba(0, 0, 0, 0) 50%);
+-webkit-transform: rotateX(90deg) translateZ(-150px);
+-moz-transform: rotateX(90deg) translateZ(-150px);
+-ms-transform: rotateX(90deg) translateZ(-150px);
+-o-transform: rotateX(90deg) translateZ(-150px);
+transform: rotateX(90deg) translateZ(-150px);
+z-index: -1;
+}
+
+.stage {
+width: 300px;
+height: 300px;
+display: inline-block;
+margin: 20px;
+-webkit-perspective: 1200px;
+-moz-perspective: 1200px;
+-ms-perspective: 1200px;
+-o-perspective: 1200px;
+perspective: 1200px;
+-webkit-perspective-origin: 50% 50%;
+-moz-perspective-origin: 50% 50%;
+-ms-perspective-origin: 50% 50%;
+-o-perspective-origin: 50% 50%;
+perspective-origin: 50% 50%;
+}
+
+@-moz-keyframes move-map {
+0% { background-position: -849px 0; }
+100% { background-position: 0 0; }
+}
+
+@-webkit-keyframes move-map {
+0% { background-position: 0 0; }
+100% { background-position: -849px 0; }
+}
+
+
+@-o-keyframes move-map {
+0% { background-position: -849px 0; }
+100% { background-position: 0 0; }
+}
+
+@-ms-keyframes move-map {
+0% { background-position: -849px 0; }
+100% { background-position: 0 0; }
+}
+
+@keyframes move-map {
+0% { background-position: -849px 0; }
+100% { background-position: 0 0; }
+}
+
+#fmmFoot {
+text-align: center;
+-webkit-justify-content: center;
+justify-content: center;
 }
